--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "description": "A simple and quick tutorial to implement a chat using the MERN stack.",
   "main": "index.js",
   "scripts": {
-    "dev": "concurrently --kill-others \"heroku local\"",
-    "postinstall": "npm install --prefix ./server",
+    "dev": "concurrently --kill-others \"heroku local\" \"npm run start --prefix ./client\"",
+    "postinstall": "npm install --prefix ./server && npm install --prefix ./client && npm run build --prefix ./client",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
